# milstack-rag

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
src/: main.py  rag_app.py
src/components/: config.py  document_loader.py  document_manager.py  document_processor.py  document_store.py  embedder.py  list_joiner.py  llm.py  memory_store.py  unified_document_manager.py
src/components/document_utils/: indexer.py  loader.py  processor.py
src/data/: document_loader.py
src/pipeline/: base_pipeline.py  component_factory.py  pipeline_builder.py  rag_pipeline.py  template_provider.py
src/ui/: gradio_interface.py
